# cargo-template-ci

./: .travis.yml  Cargo.toml  README.md  bors.toml
.circleci/: config.yaml  config.yml
src/: bors.rs  ci.rs  config.rs  macros.rs  main.rs
src/ci/: circleci.rs  travis.rs
templates/: circleci.yml  travis.yml
