[package]
edition = '2018'
name = "cargo-template-ci"
version = "0.2.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/cargo-template-ci"
readme = "README.md"
description = "Generate a CI configuration from a template and Cargo config"
documentation = "https://docs.rs/cargo-template-ci"

build = "build.rs"

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"

[package.metadata.template_ci.additional_matrix_entries.something_custom]
name = "custom_templated_run"
install_commandline='echo "installing for custom tests"'
commandline='echo "running custom tests"'

[badges]
circle-ci = { repository = "antifuchs/cargo-template-ci", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
askama = { version = "0.7.2", features=["serde-json"]}
cargo_metadata = "0.6.0"
failure = "0.1.1"
failure_derive = "0.1.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
clap = "2.32.0"
tempfile = "3.0.4"
custom_error = "1.3.0"
structopt = "0.2.14"
toml = "0.5.6"
humantime-serde = "1.0.0"

[build-dependencies]
askama = { version = "0.7.2", features=["serde-json"]}
